--- a/infra_setup/jenkinsfile
+++ b/infra_setup/jenkinsfile
@@ -10,13 +10,14 @@ pipeline {
         stage('Terraform Plan') {
             steps {
                 script{      
-                        cd "infra_setup"       
-                        sh "terraform init"
-                        PLANSTATUS = sh(returnStatus: true, script: "terraform plan -detailed-exitcode -lock=true -out jenkins-backend.tfplan")
-                        if (PLANSTATUS == 1) {
-                            currentBuild.result = 'ABORTED'
-                            error("Terraform Plan failed, check output.")
-                        }                    
+                        dir("infra_setup") {
+                            sh "terraform init"
+                            PLANSTATUS = sh(returnStatus: true, script: "terraform plan -detailed-exitcode -lock=true -out jenkins-backend.tfplan")
+                            if (PLANSTATUS == 1) {
+                                currentBuild.result = 'ABORTED'
+                                error("Terraform Plan failed, check output.")
+                            }   
+                        }                 
                 } // script
             } // steps
         } // stage
