--- a/infra_setup/deploy_image/jenkinsfile
+++ b/infra_setup/deploy_image/jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
         stage('Docker Build') {
             steps {
                 script {
-                    dir("deploy_image") {
+                    // dir("deploy_image") {
                         dockerImage = docker.build registry 
                     //dockerImage = docker.build registry + ":$BUILD_NUMBER"
                     }
