--- a/infra_setup/deploy_image/jenkinsfile
+++ b/infra_setup/deploy_image/jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent any
     environment {
         //once you sign up for Docker hub, use that user_id here
-        registry = "540866440846.dkr.ecr.ap-south-1.amazonaws.com/jenkins-terraform"
+        registry = "540866440846.dkr.ecr.ap-south-1.amazonaws.com/sample"
         //- update your credentials ID after creating credentials for connecting to Docker Hub
         // registryCredential = 'dockerhub'
         // dockerImage = ''
