--- a/infra_setup/cloudformationstack/statelockinfra.yml
+++ b/infra_setup/cloudformationstack/statelockinfra.yml
@@ -10,12 +10,18 @@ Parameters:
     AllowedValues:
       - dev
       - sit
+      - uat
       - prod
 Resources:
   TerraformStateBucket:
     Type: AWS::S3::Bucket
     Properties:
       BucketName: !Sub '${Environment}-${Prefix}-terraform-state-${AWS::Region}-${AWS::AccountId}'
+      BucketEncryption:
+        ServerSideEncryptionConfiguration:
+          - ServerSideEncryptionByDefault:
+              SSEAlgorithm: 'aws:kms'
+              KMSMasterKeyID: !ImportValue CoreVPC:KmsKeys:S3:Id
       VersioningConfiguration:
         Status: Enabled
   TerraformStateBucketPolicy:
@@ -28,7 +34,7 @@ Resources:
           - Effect: Allow
             Action: 's3:*'
             Principal:
-              AWS: !Sub 'arn:aws:iam::${AWS::AccountId}:user/external-datalake-access'
+              AWS: !Sub 'arn:aws:iam::${AWS::AccountId}:role/external-jenkins-access'
             Resource: !Sub 'arn:aws:s3:::${TerraformStateBucket}/*'
       Bucket: !Ref TerraformStateBucket
   TerraformStateLockTable:
